--- a/css/class-id-selectors/class-id-selector.html
+++ b/css/class-id-selectors/class-id-selector.html
@@ -9,8 +9,8 @@
 <body>
     <div class="odd">Number 1 - I'm a class!</div>
     <div ID="two">Number 2 - I'm one ID</div>
-    <div class="odd"ID="three">Number 3 - I'm a class, but cooler!</div>
-    <div ID="four">Number 4 - I'm another ID.</div>
+    <div class="odd font-adjust">Number 3 - I'm a class, but cooler!</div>
+    <div ID="four" class="font-adjust">Number 4 - I'm another ID.</div>
     <div class="odd">Number 5 - I'm a class!</div>
 </body>
 </html>
