--- a/html-boilerplate/odin-links-and-images/pages/about.html
+++ b/html-boilerplate/odin-links-and-images/pages/about.html
@@ -7,6 +7,6 @@
 
   <body>
     <h1>About Page</h1>
-    <img src="../images/mstile-310x310.png">
+    <img src="../images/mstile-310x310.png"alt="The Odin Project Logo" heigh="310" widht="310">
   </body>
 </html>
